--- a/week2/day2/awesomeAnswers/newQuestion.html
+++ b/week2/day2/awesomeAnswers/newQuestion.html
@@ -39,7 +39,14 @@
 <h2>Body</h2>
 <textarea class='forms body' name='body' type='text'></textarea>
 </div>
+<div class='submitForm'>
+<input type='submit'>
+</div>
 </form>
 </article>
+<footer>
+<div class='about'>About</div>
+<div class='contact'>Contact</div>
+</footer>
 </body>
 </html>
