improve newQuestion.html

--- a/week2/day2/awesomeAnswers/newQuestion.html
+++ b/week2/day2/awesomeAnswers/newQuestion.html
@@ -39,10 +39,10 @@
 <h2>Body</h2>
 <textarea class='forms body' name='body' type='text'></textarea>
 </div>
-<div class='submitForm'>
-<input type='submit'>
-</div>
 </form>
+<div class='submitForm'>
+<button>Submit Question</button>
+</div>
 </article>
 <footer>
 <div class='about'>About</div>
