--- a/week2/day2/awesomeAnswers/questions.html
+++ b/week2/day2/awesomeAnswers/questions.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Awesome Answers | Questions</title>
-<link href='styles/styles.css' rel='stylesheet' type='text/css'>
+<link href='styles/questions.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <header id='header'>
