add SQL labs/lessons

--- a/week3/day2/labs/awesomeAnswersRedux/index.html
+++ b/week3/day2/labs/awesomeAnswersRedux/index.html
@@ -1,51 +1,75 @@
 <html>
-<head>
-<title>Awesome Answers | Home</title>
-<link href='styles/index.css' rel='stylesheet' type='text/css'>
-</head>
-<body>
-<header id='header'>
-<div class='branding'>
-<a href='index.html'>
-<img class='logo' src='./awesome-answers-logo2.svg'>
-</a>
-</div>
-<div class='nav'>
-<ul class='menu'>
-<li class='menu-item'>
-<button class='menu-button' onclick='location.href = &#39;./questions.html&#39;'>Questions</button>
-</li>
-<li class='menu-item'>
-<button class='menu-button' onclick='location.href = &#39;./newQuestion.html&#39;'>New Question</button>
-</li>
-<li class='menu-item'>
-<button class='menu-button' onclick='location.href = &#39;./signUp.html&#39;'>Sign Up</button>
-</li>
-<li class='menu-item'>
-<button class='menu-button' onclick='location.href = &#39;./signIn.html&#39;'>Sign In</button>
-</li>
-<li class='menu-button ghost'></li>
-</ul>
-</div>
-</header>
-<article>
-<div class='splash'>
-<div class='header'>
-<h1>You know nothing, Jon Snow!</h1>
-</div>
-<div class='quote'>
-<h2>A dream of Spring. All men must die. Pay the iron price. It is rare to meet a Lannister who shares my enthusiasm for dead Lannisters. Unbowed, Unbent, Unbroken.</h2>
-<div class='stamps'>
-<p>Asked by Jon Snow 4 months ago</p>
-<p>Last edited 4 months ago</p>
-<p>Seen 21241 times</p>
-</div>
-</div>
-</div>
-</article>
-<footer>
-<div class='about'>About</div>
-<div class='contact'>Contact</div>
-</footer>
-</body>
+    <head>
+        <title>Awesome Answers | Home</title>
+        <link href="styles/index.css" rel="stylesheet" type="text/css" />
+    </head>
+    <body>
+        <header id="header">
+            <div class="branding">
+                <a href="index.html">
+                    <img class="logo" src="./awesome-answers-logo2.svg" />
+                </a>
+            </div>
+            <div class="nav">
+                <ul class="menu">
+                    <li class="menu-item">
+                        <button
+                            class="menu-button"
+                            onclick="location.href = &#39;./questions.html&#39;"
+                        >
+                            Questions
+                        </button>
+                    </li>
+                    <li class="menu-item">
+                        <button
+                            class="menu-button"
+                            onclick="location.href = &#39;./newQuestion.html&#39;"
+                        >
+                            New Question
+                        </button>
+                    </li>
+                    <li class="menu-item">
+                        <button
+                            class="menu-button"
+                            onclick="location.href = &#39;./signUp.html&#39;"
+                        >
+                            Sign Up
+                        </button>
+                    </li>
+                    <li class="menu-item">
+                        <button
+                            class="menu-button"
+                            onclick="location.href = &#39;./signIn.html&#39;"
+                        >
+                            Sign In
+                        </button>
+                    </li>
+                    <li class="menu-button ghost"></li>
+                </ul>
+            </div>
+        </header>
+        <article>
+            <div class="splash">
+                <div class="header">
+                    <h1>You know nothing, Jon Snow!</h1>
+                </div>
+                <div class="quote">
+                    <h2>
+                        A dream of Spring. All men must die. Pay the iron price.
+                        It is rare to meet a Lannister who shares my enthusiasm
+                        for dead Lannisters. Unbowed, Unbent, Unbroken.
+                    </h2>
+                    <div class="stamps">
+                        <p>Asked by Jon Snow 4 months ago</p>
+                        <p>Last edited 4 months ago</p>
+                        <p>Seen 21241 times</p>
+                    </div>
+                </div>
+            </div>
+        </article>
+        <footer>
+            <div class="about">About</div>
+            <div class="contact">Contact</div>
+        </footer>
+    </body>
 </html>
